finish javaside server setup

--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.data.rest.enabled=false
 
 logging.level.com.app.prediction_model=DEBUG
 logging.level.root=INFO
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
